--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         </p>
                         <div class="row">
                             <div class="col-12">
-                                <a href="">Saber Más</a>
+                                <a href="studies.html">Saber Más</a>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                         </p>
                         <div class="row">
                             <div class="col-12">
-                                <a href="">Saber Más</a>
+                                <a href="experience.html">Saber Más</a>
                             </div>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                         </p>
                         <div class="row">
                             <div class="col-12">
-                                <a href="">Saber Más</a>
+                                <a href="proyect.html">Saber Más</a>
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                         </p>
                         <div class="row">
                             <div class="col-12">
-                                <a href="">Saber Más</a>
+                                <a href="skills.html">Saber Más</a>
                             </div>
                         </div>
                     </div>
@@ -243,7 +243,6 @@
                             Officia consequatur vero commodi omnis ad quibusdam laborum. Voluptas dignissimos blanditiis
                             consequatur nisi? Totam?
                         </p>
-                        <a href="">Saber Más</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 p-3">
@@ -255,7 +254,6 @@
                             Officia consequatur vero commodi omnis ad quibusdam laborum. Voluptas dignissimos blanditiis
                             consequatur nisi? Totam?
                         </p>
-                        <a href="">Saber Más</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 p-3">
@@ -267,7 +265,6 @@
                             Officia consequatur vero commodi omnis ad quibusdam laborum. Voluptas dignissimos blanditiis
                             consequatur nisi? Totam?
                         </p>
-                        <a href="">Saber Más</a>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 p-3">
@@ -279,7 +276,6 @@
                             Officia consequatur vero commodi omnis ad quibusdam laborum. Voluptas dignissimos blanditiis
                             consequatur nisi? Totam?
                         </p>
-                        <a href="">Saber Más</a>
                     </div>
                 </div>
             </div>
@@ -441,9 +437,6 @@
         </div>
     </section>
     <!-- Sección 6 - Contacto -->
-
-    <!-- Sección 7 - Pie de pagina -->
-    <!-- Sección 7 - Pie de pagina -->
 
 
     <!-- Scripts de Bootstrap 5-->
